assets/sass/main.scss
/* ... */
.has-flex-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.img-button {
  width: $icon-block-size;
  margin: 2rem;
  margin-top: 0.5rem;
  @include touch {
    width: $icon-block-size-touch;
    margin: 1.5rem;
    margin-bottom: 0;
  }
  &:hover {
    img {background-color: darken($primary, 2.5%);}
    // h2 {color: darken($primary, 2.5%);}
  }
  h2 {
    text-align: center;
    margin: 0.5rem -1.5rem;
    font-size: 1.4rem;
    font-weight: 400;
  }
  img {
    background-color: $primary;
    width: $icon-block-size;
    height: $icon-block-size;
    @include touch {
      width: $icon-block-size-touch;
      height: $icon-block-size-touch;
    }
  }
}

// COMPONENT: PROJECT
.project-section {
  padding: 0;
  display: flex;
  flex-direction: column;

  &.no-image {
    .section-image {
      width: 0;
    }
    .section-content {
      width: 100%;
    }
  }

  &:nth-child(even) {
    background-color: $white;
    @include tablet {
      flex-direction: row-reverse;
      .section-content {
        padding-left: 4*$column-gap;
      }
    }
  }
  &:nth-child(odd) {
    @include tablet {
      flex-direction: row;
      .section-content {
        padding-right: 4*$column-gap;
      }
    }
  }
  .section-image {
    width: 40%;
    position: relative;
    align-self: center;
    @include mobile {
      width: 100%;
    }
    &.is-padded {
      padding: 2* $column-gap;
    }
    &.is-cover {
      align-self: stretch;
      justify-self: stretch;
      img {
        object-fit: cover;
        object-position: center center;
        height: 100%;
        width: 100%;
      }
    }
  }
  .section-content {
    width: 60%;
    padding: 3*$column-gap 2*$column-gap;
    @include mobile {
      width: 100%;
      padding: 2*$column-gap;
    }
    .title.results-title {
      //margin-top: 1.25rem;
      margin-bottom: 0.75rem;
    }
  }
}

// COMPONENT : GALLERY
.gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  // @include touch {
  //   grid-template-columns: repeat(2, 1fr);
  // }
  grid-gap: -1px;
  .img-holder {
    width: 100%;
    padding-bottom: 75%;  // 4:3
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    @include touch {
      padding-bottom: 100%;
    }
    .caption-source {
      font-size: 0.65rem;
      font-weight: 500;
      position: absolute;
      bottom: 0;
      right: 0;
      color: $light;
      background-color: rgba(0, 0, 0, 0.45);
      padding: 0.25em 0.75em;
      //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
    }
  }
}

// COMPONENT : SQUAREICONLINK
.square-icon-link {
  background-color: $primary;
  color: $white;
  font-size: 2rem;
  line-height: 1em;
  width: 1.25em;
  height: 1.25em;
  margin: 0 0.5rem 1rem 0.5rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  &:hover {
    color: $white;
    background-color: $dark;
  }
}

// COMPONENTS : PUBLICATIONS
.highlight-author {
  font-weight: 600;
}
.publication.has-download {
  position: relative;
  .download-link {
    position: absolute;
    left: 0;
    color: $grey-light;
    a:hover {
      color: $text;
    }
  }
  .citation {
    display: block;
    padding-left: 1.75em;
  }
}

